--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create ./migrations/$npm_config_name",
+    "migration:generate": "npm run typeorm -- --dataSource=./typeorm.config.ts migration:generate ./migrations/$npm_config_name",
+    "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --dataSource=./typeorm.config.ts migration:run",
+    "migration:revert": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --dataSource=./typeorm.config.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -30,7 +35,8 @@
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.21"
+    "typeorm": "^0.3.21",
+    "typeorm-extension": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
