Modulo de Authentication realiza la autenticacion de los usuarios, Modulo Users completado, cambios de PG a MySql

--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,11 @@
-PORT=
-DB_HOST=
-DB_PORT=
-DB_NAME=
-DB_USERNAME=
-DB_PASSWORD=
-NODE_ENV=
+PORT=3000
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=econet_db
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+NODE_ENV=development
+
+# JWT Configuration
+JWT_SECRET=econet_super_secret_key_change_in_production
+JWT_EXPIRATION=1d
