--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,35 +11,35 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=${PORT:-3000}
-      - DB_HOST=mysql
-      - DB_PORT=${DB_PORT:-3306}
+      - DB_HOST=postgres
+      - DB_PORT=${DB_PORT:-5432}
       - DB_NAME=${DB_NAME:-econet_db}
-      - DB_USERNAME=${DB_USERNAME:-root}
-      - DB_PASSWORD=${DB_PASSWORD:-root}
+      - DB_USERNAME=${DB_USERNAME:-postgres}
+      - DB_PASSWORD=postgres123
     depends_on:
-      - mysql
+      - postgres
     networks:
       - econet-network
     restart: unless-stopped
     volumes:
       - ./.env:/app/.env:ro
   
-  mysql:
-    image: mysql:8.0
-    container_name: econet-mysql
+  postgres:
+    image: postgres:14
+    container_name: econet-postgres
     ports:
-      - "${DB_PORT:-3306}:3306"
+      - "${DB_PORT:-5432}:5432"
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
-      MYSQL_DATABASE: ${DB_NAME:-econet_db}
+      POSTGRES_DB: ${DB_NAME:-econet_db}
+      POSTGRES_USER: ${DB_USERNAME:-postgres}
+      POSTGRES_PASSWORD: postgres123
     volumes:
-      - mysql_data:/var/lib/mysql
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - econet-network
     restart: unless-stopped
-    command: --default-authentication-plugin=mysql_native_password
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_PASSWORD:-root}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME:-postgres} -d ${DB_NAME:-econet_db}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -49,5 +49,5 @@ networks:
     driver: bridge
 
 volumes:
-  mysql_data:
-    name: econet-mysql-data
+  postgres_data:
+    name: econet-postgres-data
