--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,9 @@
 PORT=3000
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=3306
 DB_NAME=econet_db
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_USERNAME=root
+DB_PASSWORD=root
 NODE_ENV=development
 
 # JWT Configuration
