--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,35 +11,35 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=${PORT:-3000}
-      - DB_HOST=postgres
-      - DB_PORT=${DB_PORT:-5432}
+      - DB_HOST=mysql
+      - DB_PORT=${DB_PORT:-3306}
       - DB_NAME=${DB_NAME:-econet_db}
-      - DB_USERNAME=${DB_USERNAME:-postgres}
-      - DB_PASSWORD=postgres123
+      - DB_USERNAME=${DB_USERNAME:-root}
+      - DB_PASSWORD=${DB_PASSWORD:-root}
     depends_on:
-      - postgres
+      - mysql
     networks:
       - econet-network
     restart: unless-stopped
     volumes:
       - ./.env:/app/.env:ro
   
-  postgres:
-    image: postgres:14
-    container_name: econet-postgres
+  mysql:
+    image: mysql:8.0
+    container_name: econet-mysql
     ports:
-      - "${DB_PORT:-5432}:5432"
+      - "${DB_PORT:-3306}:3306"
     environment:
-      POSTGRES_DB: ${DB_NAME:-econet_db}
-      POSTGRES_USER: ${DB_USERNAME:-postgres}
-      POSTGRES_PASSWORD: postgres123
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
+      MYSQL_DATABASE: ${DB_NAME:-econet_db}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - mysql_data:/var/lib/mysql
     networks:
       - econet-network
     restart: unless-stopped
+    command: --default-authentication-plugin=mysql_native_password
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME:-postgres} -d ${DB_NAME:-econet_db}"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_PASSWORD:-root}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -49,5 +49,5 @@ networks:
     driver: bridge
 
 volumes:
-  postgres_data:
-    name: econet-postgres-data
+  mysql_data:
+    name: econet-mysql-data
