--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       - DB_USERNAME=${DB_USERNAME:-root}
       - DB_PASSWORD=${DB_PASSWORD:-root}
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - econet-network
     restart: unless-stopped
