--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,22 @@
 version: '3.8'
 
 services:
-  api:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: econet-api
-    ports:
-      - "${PORT:-3000}:3000"
-    environment:
-      - NODE_ENV=production
-      - PORT=${PORT:-3000}
-      - DB_HOST=mysql
-      - DB_PORT=${DB_PORT:-3306}
-      - DB_NAME=${DB_NAME:-econet_db}
-      - DB_USERNAME=${DB_USERNAME:-root}
-      - DB_PASSWORD=${DB_PASSWORD:-root}
-    depends_on:
-      mysql:
-        condition: service_healthy
-    networks:
-      - econet-network
-    restart: unless-stopped
-    volumes:
-      - ./.env:/app/.env:ro
-  
-  mysql:
+  db:
     image: mysql:8.0
-    container_name: econet-mysql
-    ports:
-      - "${DB_PORT:-3306}:3306"
+    container_name: econet_mysql_db
+    restart: no
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
-      MYSQL_DATABASE: ${DB_NAME:-econet_db}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - '${DB_PORT}:3306'
     volumes:
       - mysql_data:/var/lib/mysql
-    networks:
-      - econet-network
-    restart: unless-stopped
-    command: --default-authentication-plugin=mysql_native_password
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_PASSWORD:-root}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-networks:
-  econet-network:
-    driver: bridge
+    env_file:
+      - .env
 
 volumes:
   mysql_data:
-    name: econet-mysql-data
+    driver: local
