Feat: Documentacion Acabada al 100
Documentacion realizada correctamente

--- a/.env-example
+++ b/.env-example
@@ -2,8 +2,8 @@ PORT=3000
 DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=econet_db
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_USERNAME=econetuser
+DB_PASSWORD=econetpass
 NODE_ENV=development
 
 # JWT Configuration
